<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/first_search_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/enter_start"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:textColor="@color/interface_secondary"
        app:strokeWidth="1dp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_user"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/second_search_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/enter_dest"
        android:textAlignment="textStart"
        android:textColor="@color/interface_secondary"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toStartOf="@+id/image_map_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_search_button"/>

    <ImageButton
        android:id="@+id/back_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_icon"
        app:tint="@color/interface_secondary" />

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_userpoint_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_view" />

    <ImageView
        android:id="@+id/image_map_point"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_map_pin_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_user"
        android:contentDescription="@string/icon_view"
        app:tint="@color/border" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/composeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/start_route_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/route_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="70dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="24dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:icon="@drawable/ic_arrow_24dp"
            app:iconTint="@color/white"
            app:iconSize="16dp"
            app:iconGravity="textStart"
            app:iconPadding="12dp"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>