<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeColor="@color/border"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/search_icon_24dp"
        app:endIconMode="custom"
        app:endIconTint="@color/interface_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:hint="@string/search"
            android:textColorHint="@color/text_secondary"
            android:textSize="20sp"
            android:paddingStart="60dp"
            android:paddingEnd="4dp"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/back_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back_24dp"
        app:layout_constraintStart_toStartOf="@id/text_input_layout"
        app:layout_constraintTop_toTopOf="@id/text_input_layout"
        android:contentDescription="@string/back_icon" />

    <TextView
        android:id="@+id/history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginStart="20dp"
        android:text="@string/history"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/recyclerview_item_history"
        tools:context="com.example.indoornavigationar.MainActivity"
        app:layout_constraintTop_toBottomOf="@id/history_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_searched_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/recyclerview_item_searched"
        tools:context="com.example.indoornavigationar.MainActivity"
        app:layout_constraintTop_toBottomOf="@id/history_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>